src/components/ChannelBanner.module.css
.splashScreen {
  position: fixed;
  box-sizing: border-box;
  height: 80vh;
  width: 100%;
  top: 0;
  left: 0;
  background-size: cover;
  z-index: 200;
  overflow: hidden;
}

.content {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.splashBar {
  position: fixed;
  height: 20vh;
  box-sizing: border-box;
  background-color: lightgrey;
  border-top: solid 2px black;
  background-image: url('/wii/sprites/splash-bar.png');
  background-size: cover;
  z-index: 201;
  width: 100%;
  left: 0;
}

.splashButtons {
  width: 50%;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  padding-top: 4.1vh;
  height: 20vh;
  box-sizing: border-box;
}

.btn {
  background-image: url('/wii/sprites/btn-texture.png');
  background-size: auto 100%;
  height: min(5vw, 60px);
  width: min(15vw, 180px);
  display: inline-block;
  position: relative;
  margin-left: min(4.5vw, 54px);
  margin-right: min(4.5vw, 54px);
  text-decoration: none;
  font-family: 'Nunito', 'Asap', sans-serif;
  color: #474747;
  font-size: min(2.2vw, 26px);
  line-height: min(calc(4.5vw + 5px), 59px);
  border: none;
  cursor: none;
  transform: scale(1);
  transition: 150ms ease;
  white-space: nowrap;
}

.btn:hover {
  transform: scale(1.1);
}

.btn::before {
  background-image: url('/wii/sprites/btn-left.png');
  background-size: 100% 100%;
  background-repeat: no-repeat;
  height: min(5vw, 60px);
  width: min(2.2vw, 26px);
  display: inline-block;
  content: '';
  position: absolute;
  left: max(-2.2vw, -26px);
}

.btn::after {
  background-image: url('/wii/sprites/btn-right.png');
  background-size: 100% 100%;
  background-repeat: no-repeat;
  height: min(5vw, 60px);
  width: min(2.2vw, 26px);
  display: inline-block;
  content: '';
  position: absolute;
  right: max(-2.2vw, -26px);
}

.border {
  position: fixed;
  width: 306px;
  height: 230px;
  z-index: 210;
  background-size: 100% 100%;
}

.borderTopleft {
  background-image: url('/wii/sprites/border-topleft.png');
  top: 0;
  left: 0;
}

.borderTopright {
  background-image: url('/wii/sprites/border-topright.png');
  top: 0;
  right: 0;
}

.borderBottomleft {
  background-image: url('/wii/sprites/border-bottomleft.png');
  bottom: 0;
  left: 0;
}

.borderBottomright {
  background-image: url('/wii/sprites/border-bottomright.png');
  bottom: 0;
  right: 0;
}

